# rust-axum-ddd-test

./: .gitignore  Cargo.toml  README.md
migration/src/: lib.rs  m20240406_000001_create_user_table.rs
src/: handler.rs  infra.rs  main.rs  services.rs
src/controllers/user/: user.rs
src/domain/: aggregate.rs
src/domain/aggregate/: user.rs
src/domain/aggregate/value_object/: user_id.rs
src/domain/interface/: user_repo.rs
src/domain/interface/user/: repository.rs  service.rs
src/domain/user/: dto.rs  mod.rs  model.rs  prelude.rs  query.rs  repository.rs  result.rs  service.rs
src/entities/: user.rs
src/infra/: db.rs  user_repo.rs
src/infra/user/: user.rs  user_repo.rs
src/services/: create_user.rs  fetch_users.rs  user.rs
src/services/user/: user.rs
src/utility/: errors.rs
