[package]
name = "axum_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = {version = "1.37.0", features = ["rt-multi-thread", "macros"]}
sea-orm = {version = "^0.12.15", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ]}
serde = {version = "1.0.197", features = ["derive"]}
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-subscriber = "0.3.18"
thiserror = "1.0.58"
rand = "0.8.5"
axum-macros = "0.4.1"
serde_json = "1.0.115"
anyhow = "1.0.81"
# rusqlite = { version = "0.7.0", features=["bundled"] }
# r2d2 = "0.8.10"
# r2d2_sqlite = "0.24.0"
